  teleportAuto_useSkill is set to 3.
- teleportAuto_dropTarget now triggers on "Unable to calculate a route to
  target, dropping target".
- Conversation code t="" now works with quotes only to support 
  longer strings with whitespace and other special chars.
- Minor cosmetic fix in 's' command
- Fixed disconnections when a guild member logs in/out

New features:
- Added XKoreProxy module. Set configuration to 'XKore proxy' to work as
  if on XKore 1 mode, but instead of injecting DLL, proxy the client connection
- dcOnDisconnect 2 will not disconnect when you run out of paid time
  now, because this is an intermittent error condition that happens on
  some buggy private servers.
- Added 'manual' AI mode, so you can still use most console commands while
  automatic AI is off.
- An empty adminPassword disables all authentication schemes to control Kore
- Manual move commands (east, west, north, south, etc) now take an optional
  'distance' parameter.
- Response list for refining equipments now displays correct item names
- shop.txt parser will complain if you try to vend more than 30,000 of an
  item. (Usually happens if you got price and quantity mixed up, which
  is bad for you since you'd be selling items way cheap.)
- Support for new Episode 10.2 skills
- teleportAuto_allPlayers 2 will prevent you from teleporting away from your
  party unless there are other non-party players around.
- Map viewer: better support for water areas.
- New vender_buy_fail packet (received when you fail to buy from a
  street vender due to insufficient zeny or overweight).
- New conversation code a="" to execute console commands. Example:
  talknpc 115 111 c r0 c a="is Novice Potion" c c c r0 c n
- Another mapname redirect for "force_1-1.fld => force_map1.fld"
- Added latest skills list (including Guild Skills)

New config options:
- autoMoveOnDeath set:
	autoMoveOnDeath <0/1>
	autoMoveOnDeath_x <INT>
	autoMoveOnDeath_y <INT>
	autoMoveOnDeath_map <MAP>
- serverEncoding